fixed project info overflow

--- a/styles/project.css
+++ b/styles/project.css
@@ -96,9 +96,10 @@ h3 {
 .right_info {
     float: right;
     text-align: right;
-    font-size: 17px;
-    line-height: 18px;
-    margin-top: 10px;
+    font-size: 14px;
+    line-height: 14px;
+    margin-top: 6px;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 hr {
